[metadata]
name = abgpt
version = 0.1.2
author = Desmond Kuan, Amir Barati Farimani
author_email = barati@cmu.edu
description = AbGPT: De Novo B-Cell Receptor Design via Generative Language Modeling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deskk/AbGPT
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.21.2
    tokenizers>=0.14.0
    torch>=2.0.1
    tqdm>=4.66.1
    transformers==4.44.2
    # transformers @ git+https://github.com/huggingface/transformers@211f93aab95d1c683494e61c3cf8ff10e1f5d6b7
python_requires = >=3.6

[options.entry_points]
console_scripts =
    abgpt_generate = abgpt.generate:main
